[package]
name = "rss-tube"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
feed-rs = "1.0"
#https://crates.io/crates/easy_rss
opml = "1.1.3"
#https://crates.io/crates/opml

crossterm = "0.22.1"
#https://crates.io/crates/crossterm

log = "0.4"
pretty_env_logger = "0.4.0"

chrono = "0.4"
#https://docs.rs/crate/chrono/latest

regex = "1.5"
#https://github.com/rust-lang/regex

html-escape = "0.2.9"
#https://crates.io/crates/html-escape // becouse in opml characters like ł are saved like this

reqwest = { version = "0.11",  default-features = false, features = ["rustls-tls", "json", "gzip", "brotli", "blocking"] }
#https://docs.rs/reqwest/latest/reqwest/

csv = "1.1.6"
#https://crates.io/crates/csv
