[package]
name = "yt-rss-offline"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = "2.0"
# https://crates.io/crates/rss
opml = "1.1.3"
#https://crates.io/crates/opml

#https://crates.io/crates/crossterm

log = "0.4"
pretty_env_logger = "0.4.0"