[package]
name = "yt-rss-offline"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
feed-rs = "1.0"
#https://crates.io/crates/easy_rss
opml = "1.1.3"
#https://crates.io/crates/opml

crossterm = "0.22.1"
#https://crates.io/crates/crossterm

log = "0.4"
pretty_env_logger = "0.4.0"

chrono = "0.4"
#https://docs.rs/crate/chrono/latest